--- a/src/pages/claim/index.css
+++ b/src/pages/claim/index.css
@@ -2,9 +2,10 @@
   position: relative;
   height: 100vh;
   width: 100vw;
+  color: white;
 }
 
-.card {
+.card, .cringe {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -17,7 +18,17 @@
   max-width: 240px;
   max-height: 600px;
   background-color: cornflowerblue;
-  border-radius: 5px;
+  border-radius: 15px;
+}
+
+.cringe::after {
+  content: '';
+  position: absolute;
+  border-radius: 15px;
+  opacity: 0.6;
+  height: 100%;
+  width: 100%;
+  background-color: grey;
 }
 
 .amount {
@@ -25,7 +36,13 @@
 }
 
 .claim-button {
+  border-color: white;
   margin: 0 0 20px 0;
+}
+
+.claim-button:disabled {
+  background-color: dimgrey;
+  color: white;
 }
 
 .login-button {
@@ -34,4 +51,97 @@
 
 .middle-text {
   margin-bottom: 15px;
+}
+
+/* Loader 4 */
+.loader-4 {
+  height: 32px;
+  width: 32px;
+}
+.loader-4::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0; left: 0;
+  bottom: 0; right: 0;
+  margin: auto;
+  width: 12px;
+  height: 12px;
+  top: 0; left: 0;
+  bottom: 0; right: 0;
+  margin: auto;
+  background: #FFF;
+  border-radius: 50%;
+  -webkit-animation: loader-4-1 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+  animation: loader-4-1 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+}
+@-webkit-keyframes loader-4-1 {
+  0%   { -webkit-transform: scale(0); opacity: 0; }
+  50%  { -webkit-transform: scale(1); opacity: 1; }
+  100% { -webkit-transform: scale(0); opacity: 0; }
+}
+@keyframes loader-4-1 {
+  0%   { transform: scale(0); opacity: 0; }
+  50%  { transform: scale(1); opacity: 1; }
+  100% { transform: scale(0); opacity: 0; }
+}
+.loader-4 span {
+  display: block;
+  position: absolute;
+  top: 0; left: 0;
+  bottom: 0; right: 0;
+  margin: auto;
+  height: 32px;
+  width: 32px;
+  -webkit-animation: loader-4-2 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+  animation: loader-4-2 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+}
+@-webkit-keyframes loader-4-2 {
+  0%   { -webkit-transform: rotate(0deg); }
+  50%  { -webkit-transform: rotate(180deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes loader-4-2 {
+  0%   { transform: rotate(0deg); }
+  50%  { transform: rotate(180deg); }
+  100% { transform: rotate(360deg); }
+}
+.loader-4 span::before,
+.loader-4 span::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0; left: 0;
+  bottom: 0; right: 0;
+  margin: auto;
+  height: 12px;
+  width: 12px;
+  background: #FFF;
+  border-radius: 50%;
+  -webkit-animation: loader-4-3 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+  animation: loader-4-3 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+}
+@-webkit-keyframes loader-4-3 {
+  0%   { -webkit-transform: translate3d(0, 0, 0) scale(1); }
+  50%  { -webkit-transform: translate3d(-16px, 0, 0) scale(.5); }
+  100% { -webkit-transform: translate3d(0, 0, 0) scale(1); }
+}
+@keyframes loader-4-3 {
+  0%   { transform: translate3d(0, 0, 0) scale(1); }
+  50%  { transform: translate3d(-16px, 0, 0) scale(.5); }
+  100% { transform: translate3d(0, 0, 0) scale(1); }
+}
+.loader-4 span::after {
+  -webkit-animation: loader-4-4 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+  animation: loader-4-4 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
+}
+@-webkit-keyframes loader-4-4 {
+  0%   { -webkit-transform: translate3d(0, 0, 0) scale(1); }
+  50%  { -webkit-transform: translate3d(16px, 0, 0) scale(.5); }
+  100% { -webkit-transform: translate3d(0, 0, 0) scale(1); }
+}
+@keyframes loader-4-4 {
+  0%   { transform: translate3d(0, 0, 0) scale(1); }
+  50%  { transform: translate3d(16px, 0, 0) scale(.5); }
+  100% { transform: translate3d(0, 0, 0) scale(1); }
 }
