--- a/src/global.css
+++ b/src/global.css
@@ -31,7 +31,7 @@ main {
 }
 
 h1 {
-  background-image: url(assets/logo-black.svg);
+  /*background-image: url(assets/logo-black.svg);*/
   background-position: center 1em;
   background-repeat: no-repeat;
   background-size: auto 1.5em;
@@ -188,7 +188,7 @@ aside footer *:last-child {
     --light-gray: #444;
   }
   h1 {
-    background-image: url(assets/logo-white.svg);
+    /*background-image: url(assets/logo-white.svg);*/
   }
   input:focus {
     box-shadow: 0 0 10em rgba(255, 255, 255, 0.02) inset;
